--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Hide API KEY
-lib/initSupabase.tsx
-
-
 node_modules/
 .expo/
 dist/
@@ -20,3 +16,6 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Hide .env
+.env
