--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "generate-supabase-type": "npx supabase gen types typescript --project-id \"mgaqlcjgrkrxpgsxevoo\" --schema public > types/supabase.ts"
+    "generate-supabase-type": "npx supabase gen types typescript --project-id \"mgaqlcjgrkrxpgsxevoo\" --schema public > @types/supabase.ts"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@supabase/supabase-js": "^2.8.0",
     "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-url-polyfill": "^1.3.0"
   },
